Updated resume page styling and HTML structure

--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
 
         <!-- Embedded Resume PDF -->
         <section class="resume-pdf">
-            <iframe src="photos/GustavoCastrejon_ElectricalEngineering2026.do.html" width="100%" height="800px" style="border: none;">
+            <iframe src="photos/GustavoCastrejon_ElectricalEngineering2026.pdf" width="100%" height="800px" style="border: none;">
                 <p>Your browser does not support iframes. <a href="photos/GustavoCastrejon_ElectricalEngineering2026.do.html">Download the HTML version of my resume</a>.</p>
             </iframe>
         </section>
