--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/resume.css"> <!-- Link to the new resume CSS file -->
+    <link rel="stylesheet" href="css/resume.css">
     <title>Resume - Gustavo Castrejon</title>
 </head>
 
@@ -27,19 +27,16 @@
 
     <!-- Main Content -->
     <main>
-        <!-- Introductory Section -->
         <section class="intro-section">
             <h2>My Resume</h2>
         </section>
 
-        <!-- Embedded Resume PDF -->
         <section class="resume-pdf">
             <iframe src="photos/GustavoCastrejon_ElectricalEngineering2026.pdf" width="100%" height="800px" style="border: none;">
                 <p>Your browser does not support iframes. <a href="photos/GustavoCastrejon_ElectricalEngineering2026.do.html">Download the HTML version of my resume</a>.</p>
             </iframe>
         </section>
 
-        <!-- Download Button -->
         <div class="download-section">
             <a href="photos/GustavoCastrejon_ElectricalEngineering2026.pdf" download class="download-btn">
                 Download Resume
@@ -63,7 +60,7 @@
 
         function handleScroll() {
             const header = document.querySelector('header');
-            if (window.pageYOffset > 95) {
+            if (window.pageYOffset > 40) {
                 header.classList.add('solid');
                 header.classList.remove('transparent');
             } else {
