--- a/resume.html
+++ b/resume.html
@@ -32,13 +32,13 @@
         </section>
 
         <section class="resume-pdf">
-            <iframe src="photos/GustavoCastrejon_ElectricalEngineering2026.pdf" width="100%" height="100%" style="border: none;">
+            <iframe src="photos\GustavoCastrejon_Electrical-Engineering2026.pdf" width="100%" height="100%" style="border: none;">
                 <p>Your browser does not support iframes. <a href="photos/GustavoCastrejon_ElectricalEngineering2026.do.html">Download the HTML version of my resume</a>.</p>
             </iframe>
         </section>
 
         <div class="download-section">
-            <a href="photos/GustavoCastrejon_ElectricalEngineering2026.pdf" download class="download-btn">
+            <a href="photos\GustavoCastrejon_Electrical-Engineering2026.pdf" download class="download-btn">
                 Download Resume
             </a>
         </div>
