new resume page

--- a/resume.html
+++ b/resume.html
@@ -45,19 +45,18 @@
 
         <!-- Toggle buttons -->
         <section class="resume-toggle">
-            <!-- TODO: update data-src / data-download paths to match your actual PDF filenames -->
             <button
                 class="toggle-btn active"
-                data-src="photos/GustavoCastrejon_Electrical-Engineering2026.pdf"
-                data-download="photos/GustavoCastrejon_Electrical-Engineering2026.pdf"
+                data-src="Resume's/GustavoCastrejon_Resume-Hardware_RF.pdf"
+                data-download="Resume's/GustavoCastrejon_Resume-Hardware_RF.pdf"
                 data-label="Hardware-focused resume">
                 Hardware Resume
             </button>
 
             <button
                 class="toggle-btn"
-                data-src="photos/GustavoCastrejon_Software-Engineering2026.pdf"
-                data-download="photos/GustavoCastrejon_Software-Engineering2026.pdf"
+                data-src="Resume's/GustavoCastrejon_Resume-Software Focus.pdf"
+                data-download="Resume's/GustavoCastrejon_Resume-Software Focus.pdf"
                 data-label="Software-focused resume">
                 Software Resume
             </button>
@@ -71,12 +70,12 @@
         <section class="resume-pdf">
             <iframe
                 id="resumeFrame"
-                src="photos/GustavoCastrejon_Electrical-Engineering2026.pdf"
+                src="Resume's/GustavoCastrejon_Resume-Hardware_RF.pdf"
                 width="100%"
                 height="100%"
                 style="border: none;">
                 <p>Your browser does not support iframes.
-                    <a href="photos/GustavoCastrejon_Electrical-Engineering2026.pdf">
+                    <a href="Resume's/GustavoCastrejon_Resume-Hardware_RF.pdf">
                         Download the current version of my resume
                     </a>.
                 </p>
@@ -86,7 +85,7 @@
         <div class="download-section">
             <a
                 id="downloadBtn"
-                href="photos/GustavoCastrejon_Electrical-Engineering2026.pdf"
+                href="Resume's/GustavoCastrejon_Resume-Hardware_RF.pdf"
                 download
                 class="download-btn">
                 Download Current Resume
